--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/masahirompp/aws-cdk-webpack-lambda-function#readme",
   "peerDependencies": {
-    "@aws-cdk/aws-lambda": "*",
-    "@aws-cdk/core": "*",
+    "aws-cdk-lib": "2.22.0",
+    "constructs": "^10.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
   },
@@ -35,9 +35,7 @@
     "cross-spawn": "^7.0.3"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.103.0",
-    "@aws-cdk/aws-lambda": "^1.89.0",
-    "@aws-cdk/core": "^1.89.0",
+    "@aws-cdk/assert": "2.22.0",
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
